--- a/doc.html
+++ b/doc.html
@@ -6,9 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>js wokrshop </h1>
-    <script type="text/javascript">
-        alert("welcome to the idiotic world of js");
+    <script>
+        
     </script>
 </body>
 </html>
